// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should view 1 expense totalling 90 1`] = `
<div>
  <h3>
    Viewing 
    1
     expense
    , totalling 
    $0.90
  </h3>
</div>
`;

exports[`should view 2 expenses totalling 94 1`] = `
<div>
  <h3>
    Viewing 
    2
     expense
    s
    , totalling 
    $0.94
  </h3>
</div>
`;
